<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">


    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:background="#40FFFFFF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
           android:layout_marginTop="@dimen/margin_24"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="@dimen/button_text_size" />

        <EditText
            android:id="@+id/edtPwdField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginRight="@dimen/activity_margin"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/button_text_size" />


        <Button
            android:id="@+id/btnLoginField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_24"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="Login"
            android:text="@string/login_button"
            android:textAllCaps="true"
            android:textColor="@color/color_white"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

</RelativeLayout>