<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:alpha="0.8"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:drawableStart="@drawable/ic_chat"
            android:drawablePadding="@dimen/margin_16"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onChatClicked"
            android:paddingLeft="@dimen/margin_22"
            android:text="@string/chat_button"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/margin_24"
            android:alpha="0.8"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onLoginClicked"
            android:paddingLeft="@dimen/margin_22"
            android:text="@string/login_button"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/margin_24"
            android:alpha="0.8"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:drawableStart="@drawable/ic_animation"
            android:drawablePadding="@dimen/margin_16"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onAnimationClicked"
            android:paddingLeft="@dimen/margin_22"
            android:text="@string/animation_button"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</RelativeLayout>
